# kwarguclass

./: .gitignore  README.md  pyproject.toml
examples/: example.py
kwarguclass/: __init__.py  error.py  wrapper.py
